--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
   <packaging>pom</packaging>
   <name>JOMC Standalone</name>
   <description>JOMC standalone environment.</description>
-  <url>http://jomc.sourceforge.net/jomc/${pom.version}</url>
+  <url>http://jomc.sourceforge.net/jomc-standalone/${pom.version}</url>
   <prerequisites>
     <maven>2.0.9</maven>
   </prerequisites>
@@ -174,9 +174,9 @@
           <version>1.0-alpha-4</version>
         </plugin>
         <plugin>
-          <groupId>net.sourceforge.mjarsigner</groupId>
-          <artifactId>jarsigner-maven-plugin</artifactId>
-          <version>1.0-beta-3</version>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jarsigner-plugin</artifactId>
+          <version>1.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -243,12 +243,7 @@
               <id>main-java-classes</id>
               <goals>
                 <goal>main-java-classes</goal>
-              </goals>
-            </execution>
-            <execution>
-              <id>verify-main-java-classes</id>
-              <goals>
-                <goal>verify-main-java-classes</goal>
+                <goal>validate-main-java-classes</goal>
               </goals>
             </execution>
             <execution>
@@ -261,12 +256,7 @@
               <id>test-java-classes</id>
               <goals>
                 <goal>test-java-classes</goal>
-              </goals>
-            </execution>
-            <execution>
-              <id>verify-test-java-classes</id>
-              <goals>
-                <goal>verify-test-java-classes</goal>
+                <goal>validate-test-java-classes</goal>
               </goals>
             </execution>
           </executions>
@@ -336,11 +326,6 @@
           </executions>
         </plugin>
         <plugin>
-          <groupId>org.jboss.maven.plugins</groupId>
-          <artifactId>maven-jboss-license-plugin</artifactId>
-          <version>1.0.0</version>
-        </plugin>
-        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-scm-plugin</artifactId>
           <version>1.2</version>
@@ -376,7 +361,7 @@
             </goals>
             <configuration>
               <resourceBundles>
-                <resourceBundle>org.jomc.build:jomc-build-resources:1.0-alpha-1-SNAPSHOT</resourceBundle>
+                <resourceBundle>org.jomc.build:jomc-build-resources:1.0</resourceBundle>
               </resourceBundles>
               <properties>
                 <buildNumber>${buildNumber}</buildNumber>
@@ -393,264 +378,107 @@
   </build>
   <dependencyManagement>
     <dependencies>
-    <!-- Compile -->
       <dependency>
         <groupId>javax.annotation</groupId>
         <artifactId>jsr250-api</artifactId>
         <version>1.0</version>
-        <scope>compile</scope>
       </dependency>
       <dependency>
         <groupId>javax.xml.bind</groupId>
         <artifactId>jaxb-api</artifactId>
         <version>2.1</version>
-        <scope>compile</scope>
       </dependency>
       <dependency>
         <groupId>javax.persistence</groupId>
         <artifactId>persistence-api</artifactId>
         <version>1.0</version>
-        <scope>compile</scope>
       </dependency>
       <dependency>
         <groupId>javax.transaction</groupId>
         <artifactId>transaction-api</artifactId>
         <version>1.1</version>
-        <scope>compile</scope>
       </dependency>
       <dependency>
         <groupId>javax.jms</groupId>
         <artifactId>jms</artifactId>
         <version>1.1</version>
-        <scope>compile</scope>
       </dependency>
       <dependency>
         <groupId>javax.resource</groupId>
         <artifactId>connector-api</artifactId>
         <version>1.5</version>
-        <scope>compile</scope>
       </dependency>
       <dependency>
         <groupId>org.jomc</groupId>
         <artifactId>jomc-api</artifactId>
         <version>1.0-alpha-1-SNAPSHOT</version>
-        <scope>compile</scope>
       </dependency>
       <dependency>
         <groupId>org.jomc.logging</groupId>
         <artifactId>jomc-logging-api</artifactId>
         <version>1.0-alpha-1-SNAPSHOT</version>
-        <scope>compile</scope>
       </dependency>
-    <!-- JBoss JTA -->
       <dependency>
         <groupId>org.jboss.transaction</groupId>
         <artifactId>jboss-jta</artifactId>
         <version>4.2.3.SP7</version>
-        <scope>provided</scope>
       </dependency>
-    <!-- Geronimo JTA -->
       <dependency>
         <groupId>org.apache.geronimo.components</groupId>
         <artifactId>geronimo-transaction</artifactId>
         <version>2.1.2</version>
-        <scope>provided</scope>
-        <exclusions>
-          <exclusion>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-jta_1.1_spec</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-j2ee-connector_1.5_spec</artifactId>
-          </exclusion>
-        </exclusions>
       </dependency>
-
-    <!-- Jonas JTA -->
       <dependency>
         <groupId>org.ow2.jotm</groupId>
         <artifactId>jotm-core</artifactId>
         <version>2.1.5</version>
-        <scope>provided</scope>
-        <exclusions>
-          <exclusion>
-            <groupId>org.ow2.spec.ee</groupId>
-            <artifactId>ow2-jta-1.1-spec</artifactId>
-          </exclusion>
-        </exclusions>
       </dependency>
-    <!--  XAPool -->
       <dependency>
         <groupId>com.experlog</groupId>
         <artifactId>xapool</artifactId>
         <version>1.5.0</version>
-        <scope>provided</scope>
       </dependency>
-
-    <!-- Hibernate -->
       <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-entitymanager</artifactId>
         <version>3.4.0.GA</version>
-        <scope>provided</scope>
-        <exclusions>
-          <exclusion>
-            <groupId>javax.transaction</groupId>
-            <artifactId>jta</artifactId>
-          </exclusion>
-        </exclusions>
       </dependency>
-    <!-- Open JPA -->
       <dependency>
         <groupId>org.apache.openjpa</groupId>
         <artifactId>openjpa</artifactId>
         <version>1.2.1</version>
-        <scope>provided</scope>
-        <exclusions>
-          <exclusion>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-jms_1.1_spec</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-jta_1.1_spec</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-jpa_3.0_spec</artifactId>
-          </exclusion>
-        </exclusions>
       </dependency>
-    <!-- Toplink -->
       <dependency>
         <groupId>toplink.essentials</groupId>
         <artifactId>toplink-essentials</artifactId>
         <version>2.1-60f</version>
-        <scope>provided</scope>
       </dependency>
-    <!-- Runtime -->
       <dependency>
         <groupId>com.sun.xml.bind</groupId>
         <artifactId>jaxb-impl</artifactId>
         <version>2.1.12</version>
-        <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>org.jomc</groupId>
         <artifactId>jomc-ri</artifactId>
         <version>1.0-alpha-1-SNAPSHOT</version>
-        <scope>runtime</scope>
-      </dependency>
-    <!-- Test -->
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>3.8.2</version>
-        <scope>test</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
-  <repositories>
-    <repository>
-      <id>http://download.java.net/maven/1</id>
-      <url>http://download.java.net/maven/1</url>
-      <layout>legacy</layout>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>http://download.java.net/maven/2</id>
-      <url>http://download.java.net/maven/2</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>http://mjarsigner.sourceforge.net/maven2/releases</id>
-      <url>http://mjarsigner.sourceforge.net/maven2/releases</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>http://repository.jboss.org/maven2</id>
-      <url>http://repository.jboss.org/maven2</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
-  <pluginRepositories>
-    <pluginRepository>
-      <id>http://download.java.net/maven/1</id>
-      <url>http://download.java.net/maven/1</url>
-      <layout>legacy</layout>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </pluginRepository>
-    <pluginRepository>
-      <id>http://download.java.net/maven/2</id>
-      <url>http://download.java.net/maven/2</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </pluginRepository>
-    <pluginRepository>
-      <id>http://mjarsigner.sourceforge.net/maven2/releases</id>
-      <url>http://mjarsigner.sourceforge.net/maven2/releases</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </pluginRepository>
-    <pluginRepository>
-      <id>http://repository.jboss.org/maven2</id>
-      <url>http://repository.jboss.org/maven2</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </pluginRepository>
-  </pluginRepositories>
   <distributionManagement>
     <repository>
-      <id>http://jomc.sourceforge.net/maven2/releases</id>
-      <name>JOMC Release Repository</name>
+      <id>repository.jomc.org</id>
+      <name>JOMC Maven 2 Repository</name>
       <url>scp://shell.sourceforge.net/home/groups/j/jo/jomc/htdocs/maven2/releases</url>
     </repository>
     <snapshotRepository>
-      <id>http://jomc.sourceforge.net/maven2/snapshots</id>
-      <name>JOMC Snapshot Repository</name>
+      <id>snapshots.jomc.org</id>
+      <name>JOMC Maven 2 Snapshot Repository</name>
       <url>scp://shell.sourceforge.net/home/groups/j/jo/jomc/htdocs/maven2/snapshots</url>
     </snapshotRepository>
     <site>
-      <id>http://jomc.sourceforge.net</id>
-      <name>JOMC Standalone Site</name>
+      <id>www.jomc.org</id>
+      <name>JOMC Site</name>
       <url>scp://shell.sourceforge.net/home/groups/j/jo/jomc/htdocs/jomc-standalone/${pom.version}</url>
     </site>
   </distributionManagement>
@@ -819,8 +647,8 @@
             </executions>
           </plugin>
           <plugin>
-            <groupId>net.sourceforge.mjarsigner</groupId>
-            <artifactId>jarsigner-maven-plugin</artifactId>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jarsigner-plugin</artifactId>
             <executions>
               <execution>
                 <id>sign</id>
