o Added jomc-notifications mailing list and updated site descriptor.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@494 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,13 @@
       <post>jomc-svn@lists.sourceforge.net</post>
       <archive>http://sourceforge.net/mailarchive/forum.php?forum=jomc-svn</archive>
     </mailingList>
+    <mailingList>
+      <name>jomc-notifications</name>
+      <subscribe>http://lists.sourceforge.net/lists/listinfo/jomc-notifications</subscribe>
+      <unsubscribe>http://lists.sourceforge.net/lists/listinfo/jomc-notifications</unsubscribe>
+      <post>jomc-notifications@lists.sourceforge.net</post>
+      <archive>http://sourceforge.net/mailarchive/forum.php?forum=jomc-notifications</archive>
+    </mailingList>
   </mailingLists>
   <scm>
     <connection>scm:svn:https://jomc.svn.sourceforge.net/svnroot/jomc/jomc-standalone/trunk</connection>
