--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,13 @@
     <url>http://jomc.svn.sourceforge.net/viewvc/jomc/jomc-standalone/trunk/</url>
   </scm>
   <build>
+    <extensions>
+      <extension>
+        <groupId>org.jomc.build</groupId>
+        <artifactId>jomc-build-resources</artifactId>
+        <version>1.2</version>
+      </extension>
+    </extensions>
     <pluginManagement>
       <plugins>
         <plugin>
@@ -188,7 +195,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-remote-resources-plugin</artifactId>
-          <version>1.0</version>
+          <version>1.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -238,7 +245,7 @@
         <plugin>
           <groupId>org.jomc</groupId>
           <artifactId>maven-jomc-plugin</artifactId>
-          <version>1.0-alpha-1-SNAPSHOT</version>
+          <version>1.0-alpha-2</version>
           <executions>
             <execution>
               <id>main-java-sources</id>
@@ -368,7 +375,7 @@
             </goals>
             <configuration>
               <resourceBundles>
-                <resourceBundle>org.jomc.build:jomc-build-resources:1.0</resourceBundle>
+                <resourceBundle>org.jomc.build:jomc-build-resources:1.2</resourceBundle>
               </resourceBundles>
               <properties>
                 <buildNumber>${buildNumber}</buildNumber>
@@ -418,12 +425,12 @@
       <dependency>
         <groupId>org.jomc</groupId>
         <artifactId>jomc-api</artifactId>
-        <version>1.0-alpha-1-SNAPSHOT</version>
+        <version>1.0-alpha-2</version>
       </dependency>
       <dependency>
         <groupId>org.jomc.logging</groupId>
         <artifactId>jomc-logging-api</artifactId>
-        <version>1.0-alpha-1-SNAPSHOT</version>
+        <version>1.0-alpha-2</version>
       </dependency>
       <dependency>
         <groupId>org.jboss.transaction</groupId>
@@ -468,7 +475,7 @@
       <dependency>
         <groupId>org.jomc</groupId>
         <artifactId>jomc-ri</artifactId>
-        <version>1.0-alpha-1-SNAPSHOT</version>
+        <version>1.0-alpha-2</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -562,6 +569,7 @@
           <issueLinkTemplatePerSystem>
             <MantisBT>http://apps.sourceforge.net/mantisbt/jomc/view.php?id=%ISSUE%</MantisBT>
           </issueLinkTemplatePerSystem>
+          <xmlPath>src/main/changes/changes.xml</xmlPath>
           <reportSets>
             <reportSet>
               <reports>
@@ -571,11 +579,21 @@
           </reportSets>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <version>2.1</version>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>emma-maven-plugin</artifactId>
+        <version>1.0-alpha-2</version>
+      </plugin>
     </plugins>
   </reporting>
   <profiles>
     <profile>
-      <id>ci</id>
+      <id>jomc-ci</id>
       <activation>
         <activeByDefault>false</activeByDefault>
       </activation>
