--- a/pom.xml
+++ b/pom.xml
@@ -560,6 +560,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
         <version>2.3</version>
+        <configuration>
+          <configLocation>org/jomc/build/resources/checkstyle.xml</configLocation>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
