o Updated compiler plugin configuration to use project.build.sourceEncoding property instead of hardcoded UTF-8.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@673 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,7 @@
             <source>1.5</source>
             <target>1.5</target>
             <debug>true</debug>
-            <encoding>UTF-8</encoding>
+            <encoding>${project.build.sourceEncoding}</encoding>
             <optimize>true</optimize>
             <showDeprecation>true</showDeprecation>
             <showWarnings>true</showWarnings>
