--- a/pom.xml
+++ b/pom.xml
@@ -209,9 +209,9 @@
           <version>2.6</version>
           <configuration>
             <breakiterator>true</breakiterator>
-            <charset>UTF-8</charset>
-            <docencoding>UTF-8</docencoding>
-            <encoding>UTF-8</encoding>
+            <charset>${project.reporting.outputEncoding}</charset>
+            <docencoding>${project.reporting.outputEncoding}</docencoding>
+            <encoding>${project.build.sourceEncoding}</encoding>
             <keywords>true</keywords>
             <linksource>true</linksource>
             <serialwarn>true</serialwarn>
@@ -517,9 +517,9 @@
             </reports>
             <configuration>
               <breakiterator>true</breakiterator>
-              <charset>UTF-8</charset>
-              <docencoding>UTF-8</docencoding>
-              <encoding>UTF-8</encoding>
+              <charset>${project.reporting.outputEncoding}</charset>
+              <docencoding>${project.reporting.outputEncoding}</docencoding>
+              <encoding>${project.build.sourceEncoding}</encoding>
               <keywords>true</keywords>
               <linksource>true</linksource>
               <serialwarn>true</serialwarn>
