o Upgraded to JOMC Logging 1.0-alpha-7.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@1157 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/pom.xml
+++ b/pom.xml
@@ -407,7 +407,7 @@
       <dependency>
         <groupId>org.jomc.logging</groupId>
         <artifactId>jomc-logging-api</artifactId>
-        <version>1.0-alpha-6</version>
+        <version>${jomc-logging.version}</version>
       </dependency>
       <dependency>
         <groupId>org.jboss.transaction</groupId>
@@ -693,5 +693,6 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <jomc.version>1.0-alpha-12</jomc.version>
+    <jomc-logging.version>1.0-alpha-7</jomc-logging.version>
   </properties>
 </project>
