o Upgraded to JOMC 1.0-alpha-13-SNAPSHOT.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@1176 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/pom.xml
+++ b/pom.xml
@@ -692,7 +692,8 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <jomc.version>1.0-alpha-12</jomc.version>
-    <jomc-logging.version>1.0-alpha-7</jomc-logging.version>
+    <jomc.version>1.0-alpha-13-SNAPSHOT</jomc.version>
+    <jomc-logging.version>1.0-alpha-8-SNAPSHOT</jomc-logging.version>
+    <logger.specification.version>1.0</logger.specification.version>
   </properties>
 </project>
