--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
   <version>1.0-alpha-5-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>JOMC Standalone</name>
-  <description>JOMC standalone environment.</description>
+  <description>Standalone environment.</description>
   <url>http://jomc.sourceforge.net/jomc-standalone/${project.version}</url>
   <prerequisites>
     <maven>2.0.10</maven>
@@ -202,7 +202,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.4.3</version>
+          <version>${surefire.version}</version>
           <configuration>
             <forkMode>once</forkMode>
           </configuration>
@@ -222,6 +222,16 @@
             <detectJavaApiLink>true</detectJavaApiLink>
             <detectOfflineLinks>false</detectOfflineLinks>
             <!-- <detectLinks>true</detectLinks> Disabled due to http://jira.codehaus.org/browse/MJAVADOC-273 -->
+            <doclet>gr.spinellis.umlgraph.doclet.UmlGraphDoc</doclet>
+            <docletArtifact>
+              <groupId>gr.spinellis</groupId>
+              <artifactId>UmlGraph</artifactId>
+              <version>4.6</version>
+            </docletArtifact>
+            <additionalparam>
+              -inferrel -inferdep -hide java.* -collpackages java.util.* -qualify -postfixpackage -nodefontsize 9
+              -nodefontpackagesize 7
+            </additionalparam>
             <archive>
               <index>true</index>
               <addMavenDescriptor>false</addMavenDescriptor>
@@ -274,7 +284,17 @@
                 <goal>validate-test-java-classes</goal>
               </goals>
             </execution>
+            <execution>
+              <id>test-model</id>
+              <goals>
+                <goal>validate-test-modules</goal>
+              </goals>
+            </execution>
           </executions>
+          <configuration>
+            <classesDirectory>${project.build.directory}/classes</classesDirectory>
+            <testClassesDirectory>${project.build.directory}/test-classes</testClassesDirectory>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -333,6 +353,39 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
           <version>2.1</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-antrun-plugin</artifactId>
+          <version>1.3</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>jaxb2-maven-plugin</artifactId>
+          <version>1.3</version>
+          <dependencies>
+            <dependency>
+              <groupId>net.sourceforge.ccxjc</groupId>
+              <artifactId>cc-xjc-plugin</artifactId>
+              <version>1.2</version>
+            </dependency>
+          </dependencies>
+          <executions>
+            <execution>
+              <id>xjc</id>
+              <phase>generate-sources</phase>
+              <goals>
+                <goal>xjc</goal>
+              </goals>
+              <configuration>
+                <arguments>-copy-constructor -mark-generated -Xinject-code</arguments>
+                <bindingDirectory>src/main/schemas</bindingDirectory>
+                <schemaDirectory>src/main/schemas</schemaDirectory>
+                <extension>true</extension>
+                <outputDirectory>${xjcOutputDirectory}</outputDirectory>
+              </configuration>
+            </execution>
+          </executions>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -460,6 +513,7 @@
               <properties>
                 <buildNumber>${buildNumber}</buildNumber>
               </properties>
+              <outputDirectory>${remoteResourcesOutputDirectory}</outputDirectory>
             </configuration>
           </execution>
         </executions>
@@ -472,16 +526,6 @@
   </build>
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>javax.annotation</groupId>
-        <artifactId>jsr250-api</artifactId>
-        <version>1.0</version>
-      </dependency>
-      <dependency>
-        <groupId>javax.xml.bind</groupId>
-        <artifactId>jaxb-api</artifactId>
-        <version>2.1</version>
-      </dependency>
       <dependency>
         <groupId>javax.persistence</groupId>
         <artifactId>persistence-api</artifactId>
@@ -502,6 +546,17 @@
         <artifactId>connector-api</artifactId>
         <version>1.5</version>
       </dependency>
+
+      <dependency>
+        <groupId>org.jomc</groupId>
+        <artifactId>jomc-util</artifactId>
+        <version>${jomc.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jomc</groupId>
+        <artifactId>jomc-model</artifactId>
+        <version>${jomc.version}</version>
+      </dependency>
       <dependency>
         <groupId>org.jomc</groupId>
         <artifactId>jomc-api</artifactId>
@@ -509,14 +564,26 @@
       </dependency>
       <dependency>
         <groupId>org.jomc</groupId>
+        <artifactId>jomc-spi</artifactId>
+        <version>${jomc.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jomc</groupId>
         <artifactId>jomc-ri</artifactId>
         <version>${jomc.version}</version>
       </dependency>
+
       <dependency>
         <groupId>org.jomc.logging</groupId>
         <artifactId>jomc-logging-api</artifactId>
         <version>${jomc-logging.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.jomc.logging</groupId>
+        <artifactId>jomc-logging-jdk-logging</artifactId>
+        <version>${jomc-logging.version}</version>
+      </dependency>
+
       <dependency>
         <groupId>org.jboss.transaction</groupId>
         <artifactId>jboss-jta</artifactId>
@@ -552,11 +619,54 @@
         <artifactId>toplink-essentials</artifactId>
         <version>2.1-60f</version>
       </dependency>
+
+      <!-- JAXB -->
+      <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>2.1</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.xml.stream</groupId>
+        <artifactId>stax-api</artifactId>
+        <version>1.0-2</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.activation</groupId>
+        <artifactId>activation</artifactId>
+        <version>1.1</version>
+      </dependency>
       <dependency>
         <groupId>com.sun.xml.bind</groupId>
         <artifactId>jaxb-impl</artifactId>
         <version>2.1.12</version>
       </dependency>
+      <dependency>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-xjc</artifactId>
+        <version>2.1.12</version>
+      </dependency>
+
+      <!-- Misc -->
+      <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>jsr250-api</artifactId>
+        <version>1.0</version>
+        <optional>true</optional>
+      </dependency>
+
+      <!-- Standalone -->
+      <dependency>
+        <groupId>org.jomc.standalone</groupId>
+        <artifactId>jomc-standalone-model</artifactId>
+        <version>1.0-alpha-5-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jomc.standalone</groupId>
+        <artifactId>jomc-standalone-ri</artifactId>
+        <version>1.0-alpha-5-SNAPSHOT</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
   <distributionManagement>
@@ -606,6 +716,16 @@
               <detectJavaApiLink>true</detectJavaApiLink>
               <detectOfflineLinks>false</detectOfflineLinks>
               <!-- <detectLinks>true</detectLinks> Disabled due to http://jira.codehaus.org/browse/MJAVADOC-273 -->
+              <doclet>gr.spinellis.umlgraph.doclet.UmlGraphDoc</doclet>
+              <docletArtifact>
+                <groupId>gr.spinellis</groupId>
+                <artifactId>UmlGraph</artifactId>
+                <version>4.6</version>
+              </docletArtifact>
+              <additionalparam>
+                -inferrel -inferdep -hide java.* -collpackages java.util.* -qualify -postfixpackage -nodefontsize 9
+                -nodefontpackagesize 7
+              </additionalparam>
             </configuration>
           </reportSet>
         </reportSets>
@@ -630,7 +750,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
-        <version>2.4.3</version>
+        <version>${surefire.version}</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -668,7 +788,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>emma-maven-plugin</artifactId>
-        <version>1.0-alpha-2</version>
+        <version>${emma-maven-plugin.version}</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -681,6 +801,30 @@
     </plugins>
   </reporting>
   <profiles>
+    <profile>
+      <id>jdk15</id>
+      <activation>
+        <jdk>1.5</jdk>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>javax.annotation</groupId>
+          <artifactId>jsr250-api</artifactId>
+          <scope>compile</scope>
+          <optional>true</optional>
+        </dependency>
+        <dependency>
+          <groupId>javax.xml.bind</groupId>
+          <artifactId>jaxb-api</artifactId>
+          <scope>compile</scope>
+        </dependency>
+        <dependency>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-impl</artifactId>
+          <scope>runtime</scope>
+        </dependency>
+      </dependencies>
+    </profile>
     <profile>
       <id>jomc-ci</id>
       <activation>
@@ -795,14 +939,20 @@
     </profile>
   </profiles>
   <modules>
+    <module>jomc-standalone-model</module>
     <module>jomc-standalone-ri</module>
   </modules>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <jomc.version>1.0-alpha-15</jomc.version>
-    <jomc-logging.version>1.0-alpha-8</jomc-logging.version>
+    <xjcOutputDirectory>${project.build.directory}/generated-sources/jaxb</xjcOutputDirectory>
+    <remoteResourcesOutputDirectory>${project.build.directory}/maven-shared-archive-resources</remoteResourcesOutputDirectory>
+    <jomc.version>1.0-alpha-16-SNAPSHOT</jomc.version>
+    <jomc-logging.version>1.0-alpha-9-SNAPSHOT</jomc-logging.version>
     <jomc-build.version>1.3</jomc-build.version>
+    <surefire.version>2.5</surefire.version>
+    <emma-maven-plugin.version>1.0-alpha-2</emma-maven-plugin.version>
     <logger.specification.version>1.0</logger.specification.version>
+    <invoker.specification.version>1.0</invoker.specification.version>
   </properties>
 </project>
