o Updated to redirect test output to files.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@1443 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,7 @@
           <version>${surefire.version}</version>
           <configuration>
             <forkMode>once</forkMode>
+            <redirectTestOutputToFile>true</redirectTestOutputToFile>
           </configuration>
         </plugin>
         <plugin>
