[maven-release-plugin] prepare release jomc-standalone-1.0-alpha-5
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@1470 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jomc.standalone</groupId>
   <artifactId>jomc-standalone</artifactId>
-  <version>1.0-alpha-5-SNAPSHOT</version>
+  <version>1.0-alpha-5</version>
   <packaging>pom</packaging>
   <name>JOMC Standalone</name>
   <description>Standalone environment.</description>
@@ -92,9 +92,9 @@
     </mailingList>
   </mailingLists>
   <scm>
-    <connection>scm:svn:https://jomc.svn.sourceforge.net/svnroot/jomc/jomc-standalone/trunk</connection>
-    <developerConnection>scm:svn:https://jomc.svn.sourceforge.net/svnroot/jomc/jomc-standalone/trunk</developerConnection>
-    <url>http://jomc.svn.sourceforge.net/viewvc/jomc/jomc-standalone/trunk/</url>
+    <connection>scm:svn:https://jomc.svn.sourceforge.net/svnroot/jomc/jomc-standalone/tags/jomc-standalone-1.0-alpha-5</connection>
+    <developerConnection>scm:svn:https://jomc.svn.sourceforge.net/svnroot/jomc/jomc-standalone/tags/jomc-standalone-1.0-alpha-5</developerConnection>
+    <url>http://jomc.svn.sourceforge.net/viewvc/jomc/jomc-standalone/tags/jomc-standalone-1.0-alpha-5</url>
   </scm>
   <build>
     <extensions>
@@ -676,12 +676,12 @@
       <dependency>
         <groupId>org.jomc.standalone</groupId>
         <artifactId>jomc-standalone-model</artifactId>
-        <version>1.0-alpha-5-SNAPSHOT</version>
+        <version>1.0-alpha-5</version>
       </dependency>
       <dependency>
         <groupId>org.jomc.standalone</groupId>
         <artifactId>jomc-standalone-ri</artifactId>
-        <version>1.0-alpha-5-SNAPSHOT</version>
+        <version>1.0-alpha-5</version>
       </dependency>
 
     </dependencies>
