--- a/jomc-standalone-model/pom.xml
+++ b/jomc-standalone-model/pom.xml
@@ -36,7 +36,7 @@
   <parent>
     <groupId>org.jomc.standalone</groupId>
     <artifactId>jomc-standalone</artifactId>
-    <version>1.0-alpha-5-SNAPSHOT</version>
+    <version>1.0-alpha-5</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>jomc-standalone-model</artifactId>
@@ -153,7 +153,7 @@
             <configuration>
               <tasks>
                 <copy todir="${project.build.outputDirectory}/META-INF">
-                  <fileset dir="${basedir}/src/main/bootstrap" includes="**/*.xml"/>
+                  <fileset dir="${basedir}/src/main/bootstrap" includes="**/*.xml" />
                 </copy>
               </tasks>
             </configuration>
