o Added 'ExceptionsType' and 'ExceptionType' complex types to the 'jomc-standalone-1.0.xsd' schema to support declarative exception handling. o Updated class 'org.jomc.standalone.ri.StandaloneInvoker' to correctly rollback transactions when a non-initiating frame marked an invocation for rollback.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@1482 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/jomc-standalone-model/pom.xml
+++ b/jomc-standalone-model/pom.xml
@@ -162,6 +162,18 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+    <dependency>
+      <groupId>org.jomc</groupId>
+      <artifactId>jomc-model</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
   <reporting>
     <plugins>
       <plugin>
