o Prepared for 1.0-alpha-9.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@1699 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,12 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jarsigner-plugin</artifactId>
           <version>1.2</version>
+          <configuration>
+            <arguments>
+              <argument>-tsa</argument>
+              <argument>http://time.certum.pl/</argument>
+            </arguments>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -948,8 +954,8 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <xjcOutputDirectory>${project.build.directory}/generated-sources/jaxb</xjcOutputDirectory>
     <remoteResourcesOutputDirectory>${project.build.directory}/maven-shared-archive-resources</remoteResourcesOutputDirectory>
-    <jomc.version>1.0-alpha-18</jomc.version>
-    <jomc-build.version>1.3</jomc-build.version>
+    <jomc.version>1.0-alpha-19</jomc.version>
+    <jomc-build.version>1.4</jomc-build.version>
     <surefire.version>2.5</surefire.version>
     <emma-maven-plugin.version>1.0-alpha-2</emma-maven-plugin.version>
     <invoker.specification.version>1.0</invoker.specification.version>
