o Plugin updates, dependency updates.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@1770 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/pom.xml
+++ b/pom.xml
@@ -109,10 +109,8 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.1</version>
+          <version>2.3</version>
           <configuration>
-            <source>1.5</source>
-            <target>1.5</target>
             <optimize>true</optimize>
             <showDeprecation>true</showDeprecation>
             <showWarnings>true</showWarnings>
@@ -582,7 +580,7 @@
       <dependency>
         <groupId>org.ow2.jotm</groupId>
         <artifactId>jotm-core</artifactId>
-        <version>2.1.10</version>
+        <version>2.1.9</version> <!-- See #314929 http://forge.ow2.org/tracker/index.php?func=detail&aid=314929&group_id=19&atid=100019 -->
       </dependency>
       <dependency>
         <groupId>com.experlog</groupId>
