--- a/pom.xml
+++ b/pom.xml
@@ -797,6 +797,9 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>findbugs-maven-plugin</artifactId>
         <version>2.3.1</version>
+        <configuration>
+          <maxHeap>128</maxHeap>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
