o Updated to stop forking when creating source jar files. o Updated to stop adding XJC stale files to the source jar files.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@1941 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/pom.xml
+++ b/pom.xml
@@ -376,6 +376,7 @@
                 <schemaDirectory>src/main/schemas</schemaDirectory>
                 <extension>true</extension>
                 <outputDirectory>${xjcOutputDirectory}</outputDirectory>
+                <staleFile>${project.build.directory}/xjc.staleFile</staleFile>
               </configuration>
             </execution>
           </executions>
@@ -896,7 +897,7 @@
               <execution>
                 <id>attach-sources</id>
                 <goals>
-                  <goal>jar</goal>
+                  <goal>jar-no-fork</goal>
                 </goals>
               </execution>
             </executions>
