o Added a reference to MJAXB-34.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@1950 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/pom.xml
+++ b/pom.xml
@@ -372,7 +372,7 @@
                 <schemaDirectory>src/main/schemas</schemaDirectory>
                 <extension>true</extension>
                 <outputDirectory>${xjcOutputDirectory}</outputDirectory>
-                <staleFile>${project.build.directory}/xjc.staleFile</staleFile>
+                <staleFile>${project.build.directory}/xjc.staleFile</staleFile> <!-- See http://jira.codehaus.org/browse/MJAXB-34 -->
               </configuration>
             </execution>
           </executions>
